moved subheader to header file. Fixed alignment issues

--- a/src/assets/scss/_settings.scss
+++ b/src/assets/scss/_settings.scss
@@ -39,6 +39,7 @@ $global-rounded: 500px;
 $global-breakpoint: $global-width + $global-gutter;
 $kayak-lightorange: #ff6a10;
 $kayak-darkorange:#d65600;
+$kayak-semidark:#222d37;
 $kayak-darkcolor:#14191e;
 
 // 2. Grid
